tests/typing/hints/literals/int.expected
File "tests/typing/hints/literals/int.smt2", line 2, character 11-12:
Error Unbound identifier: `1`
Hint: The current logic does not include integer arithmtic
